# simple-ros-comm

./: LICENSE  README.md  config_ros.yaml  config_ros2.yaml
machine_side/matlab/: matlab_receive.m  matlab_send.m
machine_side/python/: python_receive.py  python_send.py
ros_side/simple_ros2_comm/: CMakeLists.txt  config_ros2.yaml  package.xml
ros_side/simple_ros2_comm/include/simple_ros2_comm/: ros2_side_in.hpp
ros_side/simple_ros2_comm/src/lib/: ros2_side_in.cpp
ros_side/simple_ros2_comm/src/nodes/: node_ros2_side_in.cpp
ros_side/simple_ros_comm/: CMakeLists.txt  config_ros.yaml  package.xml
ros_side/simple_ros_comm/include/simple_ros_comm/: ros_side_in.hpp  ros_side_out.hpp
ros_side/simple_ros_comm/src/lib/: ros_side_in.cpp  ros_side_out.cpp
ros_side/simple_ros_comm/src/nodes/: node_ros_side_in.cpp  node_ros_side_out.cpp  node_test_ros_side_out.cpp
