<?xml version="1.0"?>
<package format="2">
  <name>simple_ros_comm</name>
  <version>0.0.0</version>
  <description>The simple_ros_comm package</description>
  <maintainer email="yliu333@jhu.edu">yl</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslaunch</depend>
  <depend>roscpp</depend>
  <depend>yaml-cpp</depend>

</package>